--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,7 @@
 			"prettier"
 	],
 	"rules": {
+    "no-alert":"off",
 		"prettier/prettier": "error",
 		"react-hooks/rules-of-hooks": "error",
 		"react-hooks/exhaustive-deps": "warn",
